now we created dynamically formgroup component

--- a/src/app/address/address.component.html
+++ b/src/app/address/address.component.html
@@ -1,1 +1,4 @@
-<p>address works!</p>
+<ng-container [formGroupName]="groupName">
+    <input formControlName="address" placeholder="address" />
+    <input formControlName="pincode" placeholder="pincode" />
+</ng-container>
